--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "varbox",
   "version": "0.0.1",
-  "description": "A variable box",
+  "description": "An observable variable box",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
