--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "varbox",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "An observable variable box",
   "main": "varbox.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "precommit": "npm run lint",
+    "prepush": "npm run lint",
+    "lint": "eslint . --cache",
+    "commit": "git-cz",
+    "github-push": "git push",
+    "npm-publish": "npm publish"
   },
   "repository": {
     "type": "git",
@@ -26,5 +32,10 @@
   "bugs": {
     "url": "https://github.com/zenboss/varbox/issues"
   },
-  "homepage": "https://github.com/zenboss/varbox#readme"
+  "homepage": "https://github.com/zenboss/varbox#readme",
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "git-cz": "^3.0.1",
+    "husky": "^2.4.0"
+  }
 }
