test: 💍 ($testingCase)using original assert replace with jest

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An observable variable box",
   "main": "varbox.js",
   "scripts": {
-    "test": "jest",
+    "test": "node varbox.test.js",
     "precommit": "npm run lint",
     "prepush": "npm run test",
     "lint": "eslint . --cache",
@@ -34,7 +34,6 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "git-cz": "^3.0.1",
-    "husky": "^2.4.0",
-    "jest": "^24.8.0"
+    "husky": "^2.4.0"
   }
 }
